Fixing membership to fit on mobile.

--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,8 @@ footer {
 .form-container {
     position: relative;
     width: 100%;
-    padding-top: 120%;
+    height: 100vh;
+    overflow: auto;
 }
 
 .form-container iframe {
